# RedGNAT

./: .gitignore  404.html  CLAUDE.md  Documentation-Standards.html  Makefile  README.md  crossinvestigation-plan.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: dco_check.yml  dependency-review.yml  docs.yml  pylint.yml  python-lint-fast.yml  python-security.yml  python-tests.yml  python-typecheck.yml  security-hygiene.yml  semgrep.yml
Documentation-Standards/: index.html
assets/: README.md  extra.css
assets/css/: redgnat.css
config/: config.ini.example
docs/: Documentation-Standards.md  README.md  _config.yml  index.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/explanation/: architecture.md  feedback-loop.md  phase2-activation.md  safe-harbor.md
docs/how-to/: README.md  add-technique.md  configure-gnat-integration.md  deploy-docker.md  run-engagement-for-investigation.md
docs/reference/: README.md  api.md  configuration.md  investigation-context.md  techniques.md
docs/releases/: v0.1.0.md
docs/stylesheets/: extra.css
docs/tutorials/: README.md  getting-started.md
explanation/architecture/: architecture.html  index.html
explanation/automation/: feedback-loop.html
explanation/engagement/: phase2-activation.html  safe-harbor.html
explanation/feedback-loop/: index.html
explanation/phase2-activation/: index.html
explanation/safe-harbor/: index.html
how-to/: README.html  add-technique.html  configure-gnat-integration.html  deploy-docker.html  index.html  run-engagement-for-investigation.html
how-to/add-technique/: index.html
how-to/configure-gnat-integration/: index.html
how-to/deploy-docker/: index.html
migrations/: 001_initial_schema.sql  002_engagement_schema.sql  003_investigation_context.sql
redgnat/: __init__.py  cli.py  client.py  config.py
redgnat/api/: __init__.py  app.py
redgnat/emulation/: __init__.py  plan.py  runner.py  tasks.py
redgnat/engagement/: __init__.py  gate.py  kill_switch.py  token.py
redgnat/feedback/: __init__.py  gap_reporter.py  investigation_context.py  probe_generator.py
redgnat/intake/: __init__.py  base.py  gnat_subscriber.py  normalizer.py  sandgnat_subscriber.py
redgnat/orm/: __init__.py  base.py  models.py
redgnat/plugins/: __init__.py  gnat_plugin.py
redgnat/reports/: __init__.py  cart_report.py
redgnat/scenarios/: __init__.py  builder.py  store.py  (+1 more)
reference/: README.html  api.html  configuration.html  index.html  investigation-context.html  techniques.html
releases/: v0.1.0.html
search/: search_index.json
tests/: __init__.py  conftest.py
tutorials/: README.html  getting-started.html  index.html
(+64 files in other folders)
